fix: cleanup unused legacy code and move to legacy folder
